--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^12.0.0",
+    "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-cors": "^0.0.16"
