--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16"
   },
   "devDependencies": {
     "@types/koa": "^2.13.6",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/node": "^20.3.3",
     "typescript": "^5.1.6"
   }
