--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.16.2",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16"
