--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
-    "koa-cors": "^0.0.16"
+    "koa-cors": "^0.0.16",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/koa": "^2.13.6",
