--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
+    "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16",
     "validator": "^13.9.0"
