--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-cors": "^0.0.16",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
